--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
         <h1>404</h1>
         <h2>Page non trouvée</h2>
         <p>Oups ! La page que vous recherchez n'existe pas ou a été déplacée.</p>
-        <a href="https://rocknite-studio.github.io/">Retour à l'accueil</a>
+        <a href="/">Retour à l'accueil</a>
     </div>
 </body>
 </html>
