--- a/game/index.html
+++ b/game/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE STUDIO | Support</title>
+    <title>ROCKNITE STUDIO | Jeux</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/logo.png">
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <!-- Barre de navigation -->
     <header>
         <ul>
             <li><a href="/">Accueil</a></li>
@@ -18,12 +19,10 @@
         </ul>
     </header>
 
-    <!-- Conteneur principal -->
-    <div class="container">
-        <h1>Notre Équipe de Support</h1>
-        <div id="support-list"></div>
-    </div>
+    <!-- Section du jeu en vedette -->
+    <div id="featured-game" class="featured-game"></div>
 
-    <script src="script.js"></script>
+    <!-- Section pour la liste des jeux -->
+    <div id="games-list" class="games-list"></div>
 </body>
 </html>
