--- a/jeux/index.html
+++ b/jeux/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE STUDIO | Jeux</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://rocknite-studio.github.io/logo.png">
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="d6GM2r3oV0quDAMWtnLms8UdafThSMy1hzo9j9-I42M"/>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <title>Redirection...</title>
+  <script src="script.js"></script>
 </head>
 <body>
-    <header>
-        <ul>
-            <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
-            <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
-            <li><a href="https://rocknite-studio.github.io/news">News</a></li>
-            <li><a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a></li>
-            <li><a href="https://rocknite-studio.github.io/account">Compte</a></li>
-        </ul>
-    </header>
-
-    <!-- Section du jeu en vedette -->
-    <div id="featured-game" class="featured-game"></div>
-
-    <!-- Section pour la liste des jeux -->
-    <div id="games-list" class="games-list"></div>
+  <p>Redirection...</p>
 </body>
 </html>
