--- a/account/index.html
+++ b/account/index.html
@@ -9,21 +9,11 @@
 <body>
     <header>
         <ul>
-            <li>
-                <a href="https://rocknite-studio.github.io/">Accueil</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/jeux">Jeux</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/news">News</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a>
-            </li>
-            <li>
-                <a href="https://rocknite-studio.github.io/login">Compte</a>
-            </li>
+            <li><a href="/">Accueil</a></li>
+            <li><a href="/jeux">Jeux</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/SUPPORT">Assistance</a></li>
+            <li><a href="/account">Compte</a></li>
         </ul>
     </header>
 
