--- a/game/MinosEscape/index.html
+++ b/game/MinosEscape/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <ul>
-            <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
-            <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
-            <li><a href="https://rocknite-studio.github.io/news">News</a></li>
-            <li><a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a></li>
-            <li><a href="https://rocknite-studio.github.io/account">Compte</a></li>
+            <li><a href="/">Accueil</a></li>
+            <li><a href="/jeux">Jeux</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/SUPPORT">Assistance</a></li>
+            <li><a href="/account">Compte</a></li>
         </ul>
     </header>
 
@@ -28,7 +28,7 @@
         </div>
         <div class="buttons">
             <a href="play" class="btnt">Jouer</a>
-            <a href="https://rocknite-studio.github.io/support-dev/Sneak0811" class="btn">Supportez Sneak0811</a>
+            <a href="/support-dev/Sneak0811" class="btn">Supportez Sneak0811</a>
         </div>
     </div>
 
