--- a/game/ROCKNITE-ALPHA/index.html
+++ b/game/ROCKNITE-ALPHA/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <ul>
-            <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
-            <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
-            <li><a href="https://rocknite-studio.github.io/news">News</a></li>
-            <li><a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a></li>
-            <li><a href="https://rocknite-studio.github.io/account">Compte</a></li>
+            <li><a href="/">Accueil</a></li>
+            <li><a href="/jeux">Jeux</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/SUPPORT">Assistance</a></li>
+            <li><a href="/account">Compte</a></li>
         </ul>
     </header>
 
@@ -22,12 +22,12 @@
             <small>Version 1.3.0</small>
             <h1>ROCKNITE [ALPHA]</h1>
             <p>
-                Plonge dans l'univers explosif de ROCKNITE, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique. Ceci est une version ALPHA qui n'est pas fini et qui peut contenir des bugs !
+                Plonge dans l'univers explosif de ROCKNITE, un jeu d'action en monde ouvert inspiré des plus grands titres comme GTA. Explore des villes vibrantes, participe à des missions palpitantes et crée ton propre chemin dans cette aventure épique. Ceci est une version MORTE, ce qui signifie qu'elle ne sera pas mise à jour et qu'elle n'est plus disponible. Une version sera peut-être republiée un jour.
             </p>
             <p class="price">Prix : Gratuit</p>
         </div>
         <div class="buttons">
-            <a href="https://cdn-rocknite-studio.serveo.net/ROCKNITE-ALPHA-LATEST.zip" class="btn">Obtenir</a>
+            <a href="/game/ROCKNITE-ALPHA/images" class="btn">Images</a>
         </div>
     </div>
 
