--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE STUDIO | Acceuil</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="https://rocknite-studio.github.io/logo.png" />
+    <link rel="icon" href="/logo.png" />
     <meta name="description" content="ROCKNITE STUDIO">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="https://rocknite-studio.github.io/">Accueil</a></li>
-            <li><a href="https://rocknite-studio.github.io/jeux">Jeux</a></li>
-            <li><a href="https://rocknite-studio.github.io/news">News</a></li>
-            <li><a href="https://rocknite-studio.github.io/SUPPORT">Assistance</a></li>
-            <li><a href="https://rocknite-studio.github.io/account">Compte</a></li>
+            <li><a href="/">Accueil</a></li>
+            <li><a href="/jeux">Jeux</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="/SUPPORT">Assistance</a></li>
+            <li><a href="/account">Compte</a></li>
         </ul>
     </header>
 
@@ -26,7 +26,7 @@
                 <div class="content">
                     <small>ROCKNITE</small>
                     <h1>Reprise du développement de ROCKNITE !</h1>
-                    <a href="https://rocknite-studio.github.io/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
@@ -34,7 +34,7 @@
                 <div class="content">
                     <small>Minos Escape</small>
                     <h1>Minos Escape V1 est la !</h1>
-                    <a href="https://rocknite-studio.github.io/game/MinosEscape/" class="btn">JOUER</a>
+                    <a href="/game/MinosEscape/" class="btn">JOUER</a>
                 </div>
             </div>
             <div class="slide">
@@ -42,7 +42,7 @@
                 <div class="content">
                     <small>Resonance of Destruction</small>
                     <h1>Le développement de Resonance of Destruction a commencé !</h1>
-                    <a href="https://rocknite-studio.github.io/news/ResonanceOfDestruction/" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="/news/ResonanceOfDestruction/" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
@@ -50,7 +50,7 @@
                 <div class="content">
                     <small>ROCKNITE</small>
                     <h1>Le projet ROCKNITE a été mis en pause.</h1>
-                    <a href="https://rocknite-studio.github.io/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
         </div>
