the last update.

--- a/v2/game/ROCKNITE-ALPHA/images/index.html
+++ b/v2/game/ROCKNITE-ALPHA/images/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE STUDIO | Acceuil</title>
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/v2/style.css" />
     <link rel="icon" href="https://rocknite-studio.github.io/logo.png" />
     <meta name="description" content="ROCKNITE STUDIO">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/jeux">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v2/">Accueil</a></li>
+            <li><a href="/v2/jeux">Jeux</a></li>
+            <li><a href="/v2/news">News</a></li>
+            <li><a href="/v2/SUPPORT">Assistance</a></li>
+            <li><a href="/v2/account">Compte</a></li>
         </ul>
     </header>
 
@@ -48,6 +48,6 @@
         <div class="dots" id="dots"></div>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="/v2/script.js"></script>
 </body>
 </html>
