--- a/v2/support-dev/Satanas1275/index.html
+++ b/v2/support-dev/Satanas1275/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE STUDIO | Preview</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="/logo.png" />
+    <link rel="icon" href="/v2/logo.png" />
     <meta name="description" content="ROCKNITE STUDIO">
 </head>
 <body>
     <header>
         <ul>
             <li>
-                <a href="/">Acceuil</a>
+                <a href="/v2/">Acceuil</a>
             </li>
             <li>
-                <a href="/jeux">Jeux</a>
+                <a href="/v2/jeux">Jeux</a>
             </li>
             <li>
-                <a href="/news">News</a>
+                <a href="/v2/news">News</a>
             </li>
             <li>
-                <a href="/SUPPORT">Assistance</a>
+                <a href="/v2/SUPPORT">Assistance</a>
             </li>
             <li>
-                <a href="/login">Compte</a>
+                <a href="/v2/login">Compte</a>
             </li>
         </ul>
     </header>
