--- a/v2/SUPPORT/index.html
+++ b/v2/SUPPORT/index.html
@@ -10,11 +10,11 @@
     <!-- Barre de navigation -->
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/jeux">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v2/">Accueil</a></li>
+            <li><a href="/v2/jeux">Jeux</a></li>
+            <li><a href="/v2/news">News</a></li>
+            <li><a href="/v2/SUPPORT">Assistance</a></li>
+            <li><a href="/v2/account">Compte</a></li>
         </ul>
     </header>
 
