--- a/v2/game/ROCKNITE-ALPHA/index.html
+++ b/v2/game/ROCKNITE-ALPHA/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/jeux">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v2/">Accueil</a></li>
+            <li><a href="/v2/jeux">Jeux</a></li>
+            <li><a href="/v2/news">News</a></li>
+            <li><a href="/v2/SUPPORT">Assistance</a></li>
+            <li><a href="/v2/account">Compte</a></li>
         </ul>
     </header>
 
@@ -27,7 +27,7 @@
             <p class="price">Prix : Gratuit</p>
         </div>
         <div class="buttons">
-            <a href="/game/ROCKNITE-ALPHA/images" class="btn">Images</a>
+            <a href="/v2/game/ROCKNITE-ALPHA/images" class="btn">Images</a>
         </div>
     </div>
 
