--- a/v2/game/index.html
+++ b/v2/game/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE STUDIO | Jeux</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/logo.png">
+    <link rel="icon" href="/v2/logo.png">
     <script defer src="script.js"></script>
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/jeux">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v2/">Accueil</a></li>
+            <li><a href="/v2/jeux">Jeux</a></li>
+            <li><a href="/v2/news">News</a></li>
+            <li><a href="/v2/SUPPORT">Assistance</a></li>
+            <li><a href="/v2/account">Compte</a></li>
         </ul>
     </header>
 
