--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <span class="event-date">Novembre 2024</span> - Passage à GitHub Pages
         </div>
         <div class="event">
-            <span class="event-date">Septembre 2025</span> - Achat d'un nom de domaine + passage en hebergement local + grosse mise a jour du github.
+            <span class="event-date">Septembre 2025</span> - Achat du domaine, hébergement local et mise à jour GitHub
         </div>
     </div>
 
