--- a/v3/SUPPORT/index.html
+++ b/v3/SUPPORT/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE STUDIO | Support</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="/header.css" />
-    <link rel="icon" href="/logo.png" />
+    <link rel="stylesheet" type="text/css" href="/v3/header.css" />
+    <link rel="icon" href="/v3/logo.png" />
 </head>
 <body>
     <!-- Barre de navigation -->
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/game">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v3/">Accueil</a></li>
+            <li><a href="/v3/game">Jeux</a></li>
+            <li><a href="/v3/news">News</a></li>
+            <li><a href="/v3/SUPPORT">Assistance</a></li>
+            <li><a href="/v3/account">Compte</a></li>
         </ul>
     </header>
 
