--- a/v3/account/index.html
+++ b/v3/account/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <title>Connexion PocketBase</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" type="text/css" href="/header.css" />
+  <link rel="stylesheet" type="text/css" href="/v3/header.css" />
   <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/game">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v3/">Accueil</a></li>
+            <li><a href="/v3/game">Jeux</a></li>
+            <li><a href="/v3/news">News</a></li>
+            <li><a href="/v3/SUPPORT">Assistance</a></li>
+            <li><a href="/v3/account">Compte</a></li>
         </ul>
     </header>
 
