--- a/v3/game/ROCKNITE-ALPHA/index.html
+++ b/v3/game/ROCKNITE-ALPHA/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE ALPHA</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="/header.css" />
+    <link rel="stylesheet" type="text/css" href="/v3/header.css" />
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/jeux">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v3/">Accueil</a></li>
+            <li><a href="/v3/game">Jeux</a></li>
+            <li><a href="/v3/news">News</a></li>
+            <li><a href="/v3/SUPPORT">Assistance</a></li>
+            <li><a href="/v3/account">Compte</a></li>
         </ul>
     </header>
 
@@ -28,7 +28,7 @@
             <p class="price">Prix : Gratuit</p>
         </div>
         <div class="buttons">
-            <a href="/game/ROCKNITE-ALPHA/images" class="btn">Images</a>
+            <a href="/v3/game/ROCKNITE-ALPHA/images" class="btn">Images</a>
         </div>
     </div>
 
