--- a/v3/index.html
+++ b/v3/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ROCKNITE STUDIO | Acceuil</title>
+    <title>ROCKNITE STUDIO | Accueil</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="/header.css" />
-    <link rel="icon" href="/logo.png" />
+    <link rel="stylesheet" type="text/css" href="/v3/header.css" />
+    <link rel="icon" href="/v3/logo.png" />
     <meta name="description" content="ROCKNITE STUDIO">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/game">Jeux</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/SUPPORT">Assistance</a></li>
-            <li><a href="/account">Compte</a></li>
+            <li><a href="/v3/">Accueil</a></li>
+            <li><a href="/v3/game">Jeux</a></li>
+            <li><a href="/v3/news">News</a></li>
+            <li><a href="/v3/SUPPORT">Assistance</a></li>
+            <li><a href="/v3/account">Compte</a></li>
         </ul>
     </header>
 
@@ -27,7 +27,7 @@
                 <div class="content">
                     <small>ROCKNITE ALPHA</small>
                     <h1>Fin de ROCKNITE ALPHA.</h1>
-                    <a href="/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="/v3/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
@@ -35,7 +35,7 @@
                 <div class="content">
                     <small>ROCKNITE ALPHA</small>
                     <h1>Reprise du développement de ROCKNITE ALPHA !</h1>
-                    <a href="/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="/v3/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
             <div class="slide">
@@ -43,7 +43,7 @@
                 <div class="content">
                     <small>Minos Escape</small>
                     <h1>Minos Escape V1 est la !</h1>
-                    <a href="/game/MinosEscape/" class="btn">JOUER</a>
+                    <a href="/v3/game/MinosEscape/" class="btn">JOUER</a>
                 </div>
             </div>
             <div class="slide">
@@ -51,7 +51,7 @@
                 <div class="content">
                     <small>ROCKNITE ALPHA</small>
                     <h1>Le projet ROCKNITE ALPHA a été mis en pause.</h1>
-                    <a href="/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
+                    <a href="/v3/news/ROCKNITE" class="btn">ACCÉDER AUX NEWS</a>
                 </div>
             </div>
         </div>
