--- a/v3/game/index.html
+++ b/v3/game/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCKNITE STUDIO | Jeux</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="/header.css" />
-    <link rel="icon" href="/logo.png">
+    <link rel="stylesheet" type="text/css" href="/v3/header.css" />
+    <link rel="icon" href="/v3/logo.png">
     <script defer src="script.js"></script>
 </head>
 <body>
