--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
     <p>Pour voir la V1 du site :</p>
     <a href="https://rocknite-studio.github.io/v1" target="_blank">rocknite-studio.github.io/v1</a>
     <br>
-    <p>Pour voir la V1 du site :</p>
+    <p>Pour voir la V2 du site :</p>
     <a href="https://rocknite-studio.github.io/v2" target="_blank">rocknite-studio.github.io/v2</a>
+    <p>Pour voir la V3 du site :</p>
+    <a href="https://rocknite-studio.github.io/v2" target="_blank">rocknite-studio.github.io/v3</a>
     
     <!-- Bouton pour changer le thème -->
     <button class="theme-toggle" onclick="toggleTheme()">Changer de thème</button>
